// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentChatHistoryDialog > Empty State > should match snapshot for empty state 1`] = `
<div>
  <div>
    <div>
      <div />
      <div>
        <div
          class="flex flex-col gap-2 text-center sm:text-left px-6 py-3 border-b shrink-0"
          data-slot="dialog-header"
        >
          <div
            class="flex items-center gap-3"
          >
            <div
              class="p-1.5 bg-primary/10 rounded-lg shrink-0"
            >
              <div
                data-testid="bot-icon"
              />
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div>
                Test Agent
              </div>
              <p
                class="text-[10px] text-muted-foreground font-mono mt-0.5"
              >
                test-agent
              </p>
            </div>
          </div>
        </div>
        <div
          class="relative flex-1 min-h-0 overflow-hidden px-0 py-0"
          data-slot="dialog-body"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="focus-visible:ring-ring/50 size-full rounded-[inherit] transition-[color,box-shadow] outline-none focus-visible:ring-[3px] focus-visible:outline-1"
            data-radix-scroll-area-viewport=""
            data-slot="scroll-area-viewport"
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="px-4 py-2"
              >
                <div
                  class="flex flex-col items-center justify-center h-full text-center text-muted-foreground"
                >
                  <div
                    data-testid="bot-icon"
                  />
                  <p
                    class="text-sm"
                  >
                    No messages in this chat
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-testid="x-icon"
          />
          <span
            class="sr-only"
          >
            close
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AgentChatHistoryDialog > Loaded State > should match snapshot for loaded state 1`] = `
<div>
  <div>
    <div>
      <div />
      <div>
        <div
          class="flex flex-col gap-2 text-center sm:text-left px-6 py-3 border-b shrink-0"
          data-slot="dialog-header"
        >
          <div
            class="flex items-center gap-3"
          >
            <div
              class="p-1.5 bg-primary/10 rounded-lg shrink-0"
            >
              <div
                data-testid="bot-icon"
              />
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div>
                Test Agent
              </div>
              <p
                class="text-[10px] text-muted-foreground font-mono mt-0.5"
              >
                test-agent
              </p>
            </div>
          </div>
        </div>
        <div
          class="relative flex-1 min-h-0 overflow-hidden px-0 py-0"
          data-slot="dialog-body"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="focus-visible:ring-ring/50 size-full rounded-[inherit] transition-[color,box-shadow] outline-none focus-visible:ring-[3px] focus-visible:outline-1"
            data-radix-scroll-area-viewport=""
            data-slot="scroll-area-viewport"
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="px-4 py-2"
              >
                <div
                  class="relative overflow-hidden h-full"
                  data-slot="scroll-area"
                  dir="ltr"
                  style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
                >
                  <style>
                    [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
                  </style>
                  <div
                    class="focus-visible:ring-ring/50 size-full rounded-[inherit] transition-[color,box-shadow] outline-none focus-visible:ring-[3px] focus-visible:outline-1"
                    data-radix-scroll-area-viewport=""
                    data-slot="scroll-area-viewport"
                    style="overflow-x: hidden; overflow-y: scroll;"
                  >
                    <div
                      style="min-width: 100%; display: table;"
                    >
                      <div
                        class="px-6 py-4"
                      >
                        <div
                          class="mx-auto flex flex-col gap-4"
                        >
                          <div
                            data-testid="message-list"
                          >
                            <div
                              data-testid="message-user"
                            >
                              Hello agent
                            </div>
                            <div
                              data-testid="message-assistant"
                            >
                              Hello! How can I help?
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-testid="x-icon"
          />
          <span
            class="sr-only"
          >
            close
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
